# gitconfig

./: .gitconfig
inspection/api/: README.md  main.py  pyproject.toml
inspection/api/fixtures/: checks.json  employees.json
inspection/api/lib/: authentication.py  files.py  models.py  store.py
